fix auto sign-out

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.LocationFragment">
+    tools:context=".ui.LocationActivity">
 
     <TextView
         android:id="@+id/latTextView"
