--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -98,7 +98,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:text="@string/confirm_change"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/confirm_password_textInputLayout_setting" />
 
@@ -113,6 +112,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_confirm_change" />
+
+        <ImageView
+            android:id="@+id/img_delete_account"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:srcCompat="@drawable/delete_account" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_delete_account"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            style="?attr/materialButtonOutlinedStyle"
+            android:text="@string/delete_account"
+            app:layout_constraintBottom_toBottomOf="@+id/img_delete_account"
+            app:layout_constraintStart_toEndOf="@+id/img_delete_account"
+            app:layout_constraintTop_toTopOf="@+id/img_delete_account" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
