--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -134,6 +134,29 @@
             app:layout_constraintStart_toEndOf="@+id/img_delete_account"
             app:layout_constraintTop_toTopOf="@+id/img_delete_account" />
 
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/change_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="24dp"
+            android:minHeight="48dp"
+            android:text="@string/change_mode"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/mode_icon"
+            app:layout_constraintTop_toBottomOf="@+id/img_delete_account" />
+
+        <ImageView
+            android:id="@+id/mode_icon"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@+id/change_mode"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/change_mode"
+            app:srcCompat="@drawable/change_mode" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
